# imageManus

./: README.md
backend/: .env  .env_example  README.md  env_config.py  main.py  pyproject.toml  requirements.txt
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  index.jsx  styles.css
frontend/src/components/: Footer.jsx  HamburgerSVG.jsx  HeroSVGDark.jsx  HeroSVGLight.jsx  ImageProcessView.jsx  LoadingButton.jsx  LoadingSpinner.jsx  Navbar.jsx  RightArrowSketchSVG.jsx  StaticButton.jsx  ThemeToggle.jsx
frontend/src/components/SVGs/: ChevronDownSVG.jsx  HamburgerSVG.jsx  HeroSVGDark.jsx  HeroSVGLight.jsx  RightArrowSketchSVG.jsx
frontend/src/pages/: Contact.jsx  Convert.jsx  Docs.jsx  Filters.jsx  Home.jsx  RemoveBG.jsx
